fix layout issue in Services Extras table

--- a/app/assets/stylesheets/snowcrash/modules/nodes.scss
+++ b/app/assets/stylesheets/snowcrash/modules/nodes.scss
@@ -39,3 +39,10 @@ body.nodes {
     }
   }
 }
+
+td.services-extras-datum-output {
+  // Without this line, service info with very long strings of characters (e.g.
+  // an SSH key) will cause the table to be very wide and break the page's
+  // layout:
+  word-break: break-all;
+}
